setting: extansion, code spell checker, add word to dict

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,5 +27,6 @@
   "peacock.squigglyBeGone": false,
   "peacock.surpriseMeOnStartup": false,
   "peacock.affectPanelBorder": true,
-  "peacock.affectTabActiveBorder": true
+  "peacock.affectTabActiveBorder": true,
+  "cSpell.words": ["baekjoon", "codewars"]
 }
